# episode-id

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cliff.toml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  cli.py  config.py  db.py  main.py
app/api/: __init__.py  scan.py  schemas.py  views.py
app/core/: extractor.py  matcher.py  pgs.py  renamer.py
app/providers/: base.py  chakoteya.py  opensubtitles.py  registry.py
app/services/: __init__.py  jellyfin.py  jobs.py
app/static/: style.css
app/templates/: _applied.html  _error.html  _progress.html  _results.html  base.html  index.html
docs/: SPEC.md
scripts/: screenshots.py
tests/: conftest.py  test_api.py  test_chakoteya.py  test_db.py  test_extractor.py  test_jellyfin.py  test_matcher.py  test_opensubtitles.py  test_pgs.py  test_renamer.py  test_ui.py
tests/fixtures/: chakoteya_index.html
