[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "episode-id"
version = "0.1.0"
description = "Identify TV episode MKVs by subtitle fuzzy-matching and rename them for Jellyfin"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pysubs2>=1.7",
    "rapidfuzz>=3.9",
    "scipy>=1.13",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
api = [
    "jinja2>=3.1",
    "sqlmodel>=0.0.21",
]

[project.scripts]
episode-id = "app.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
